@@ -63,6 +63,7 @@ public:
    void SetPosCur(float x, float y);
    void SetObjectPosCur(float x, float y);
    void ClearObjectPosCur();
+   float ConvertToUnit(float value);
    void SetPropSel(VectorProtected<ISelect> *pvsel);
 
    void DeletePropSel(void);
@@ -148,6 +149,7 @@ public:
    bool m_fAlwaysDrawDragPoints;
    bool m_fAlwaysDrawLightCenters;
    int m_gridSize;
+   int m_convertToUnit; //0=Inches, 1=Millimeters, 2=VPUnits
 
    int m_securitylevel;
 
@@ -165,6 +167,7 @@ public:
 
    HMENU GetMainMenu(int id);
    void SetStatusBarElementInfo(const char *info);
+   void SetStatusBarUnitInfo(const char *info);
    bool m_fPropertiesFloating;
    Material dummyMaterial;
    COLORREF m_elemSelectColor;
