@@ -686,7 +686,7 @@ BEGIN
     CTEXT           "Paused",IDC_STATIC,7,7,64,10
 END
 
-IDD_EDITOR_OPTIONS DIALOGEX 0, 0, 191, 246
+IDD_EDITOR_OPTIONS DIALOGEX 0, 0, 191, 272
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Editor Options"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -697,8 +697,8 @@ BEGIN
     EDITTEXT        IDC_AUTOSAVE_MINUTES,102,32,25,12,ES_RIGHT | ES_AUTOHSCROLL
     LTEXT           "Grid size",IDC_STATIC,117,79,29,8
     EDITTEXT        IDC_GRID_SIZE,149,77,27,12,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,79,231,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,131,231,50,14
+    DEFPUSHBUTTON   "OK",IDOK,79,257,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,131,257,50,14
     LTEXT           "minutes",IDC_STATIC,132,33,25,8
     CONTROL         "Properties Menu floating (needs restart)",IDC_PROP_FLOAT_CHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,47,139,10
@@ -721,6 +721,8 @@ BEGIN
     PUSHBUTTON      "Default Colors",IDC_DEFAULT_COLORS_BUTTON,126,155,50,14
     CONTROL         "Group elements in collections as default",IDC_DEFAULT_GROUP_COLLECTION_CHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,59,141,10
+    LTEXT           "Convert VP units to",IDC_STATIC,7,231,62,8
+    COMBOBOX        IDC_UNIT_LIST_COMBO,75,227,83,60,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_COLLECTDIALOG DIALOGEX 0, 0, 316, 167
@@ -2366,7 +2368,7 @@ BEGIN
     IDD_EDITOR_OPTIONS, DIALOG
     BEGIN
         RIGHTMARGIN, 185
-        BOTTOMMARGIN, 245
+        BOTTOMMARGIN, 271
     END
 
     IDD_COLLECTDIALOG, DIALOG
